<resources>
    <string name="app_name">BlogApp</string>

    <string name="content_user_photo">User\'s Photo</string>
    <string name="register_hint_name">Name</string>
    <string name="register_hint_email">E-mail</string>
    <string name="register_hint_password">Password</string>
    <string name="register_hint_confirm_password">Confirm Password</string>
    <string name="register_button">Register</string>
    <string name="login_button">Login</string>
    <string name="login_have_no_account">Doesn\'t have an account? <u>Register Now</u></string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_logout">Logout</string>
</resources>
